--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # are not set in the shell environment.
 
 # To override these values, set the shell environment variables.
-JUPYTERHUB_VERSION=0.9.2
+JUPYTERHUB_VERSION=1.1.0
 
 # Name of Docker machine
 DOCKER_MACHINE_NAME=jupyterhub
@@ -16,7 +16,7 @@ DOCKER_MACHINE_NAME=jupyterhub
 DOCKER_NETWORK_NAME=jupyterhub-network
 
 # Single-user Jupyter Notebook server container image
-DOCKER_NOTEBOOK_IMAGE=jupyter/minimal-notebook:8ccdfc1da8d5
+DOCKER_NOTEBOOK_IMAGE=jupyter/minimal-notebook:2ce7c06a61a1
 
 # the local image we use, after pinning jupyterhub version
 LOCAL_NOTEBOOK_IMAGE=jupyterhub-user
@@ -43,3 +43,6 @@ DB_VOLUME_CONTAINER=/var/lib/postgresql/data
 
 # The name of the postgres database containing JupyterHub state
 POSTGRES_DB=jupyterhub
+
+# git token to allow download private repos.
+GIT_TOKEN=7be73bb767a0954c426ec4c2e6c6e72d30dd23f5
