--- a/Dockerfile.jupyterhub
+++ b/Dockerfile.jupyterhub
@@ -1,14 +1,15 @@
 # Copyright (c) Jupyter Development Team.
 # Distributed under the terms of the Modified BSD License.
 ARG JUPYTERHUB_VERSION
-FROM jupyterhub/jupyterhub-onbuild:$JUPYTERHUB_VERSION
 
-# Install dockerspawner, oauth, postgres
-RUN /opt/conda/bin/conda install -yq psycopg2=2.7 && \
-    /opt/conda/bin/conda clean -tipsy && \
-    /opt/conda/bin/pip install --no-cache-dir \
-        oauthenticator==0.8.* \
-        dockerspawner==0.9.*
+FROM jupyterhub/jupyterhub:latest
+
+RUN apt-get update -y && apt-get install -yq --no-install-recommends python-psycopg2 libpq-dev && \ 
+   python3 -m pip install --upgrade pip && python3 -m pip install psycopg2==2.7.3.1 && \
+   python3 -m pip install oauthenticator==0.11.0 \ 
+                            dockerspawner==0.11.1 \
+                            jupyterhub-idle-culler==1.0 \
+                            nbgitpuller
 
 # Copy TLS certificate and key
 ENV SSL_CERT /srv/jupyterhub/secrets/jupyterhub.crt
@@ -19,3 +20,5 @@ RUN chmod 700 /srv/jupyterhub/secrets && \
     chmod 600 /srv/jupyterhub/secrets/*
 
 COPY ./userlist /srv/jupyterhub/userlist
+COPY ./jupyterhub_config.py /srv/jupyterhub/jupyterhub_config.py
+COPY ./jupyterhub-templates /etc/jupyterhub/templates
